apps/base/ollama/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
  namespace: app-ollama

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`ollama.cluster.arpa`)
      kind: Rule
      services:
        - name: ollama
          namespace: app-ollama
          port: http
  tls:
    secretName: traefik-tls
